k8s/movie-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
  namespace: theater-msa
  labels:
    app: movie-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
        tier: backend
    spec:
      containers:
      - name: movie-service
        image: movie-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: cluster-name
                operator: In
                values:
                - ctx2
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  namespace: theater-msa
  labels:
    app: movie-service
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
  selector:
    app: movie-service
