k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: theater-msa
  labels:
    app: api-gateway
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: api-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: theater-msa
  labels:
    app: booking-service
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
  selector:
    app: booking-service
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  namespace: theater-msa
  labels:
    app: movie-service
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
  selector:
    app: movie-service
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: theater-msa
  labels:
    app: user-service
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: user-service
