k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: theater-msa
  labels:
    app: user-service
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
        tier: backend
    spec:
      containers:
      - name: user-service
        image: harbor.27.96.156.180.nip.io/theater-msa/user-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: cluster-name
                operator: In
                values:
                - ctx1
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: theater-msa
  labels:
    app: user-service
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: user-service
