k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: theater-msa
  namespace: istio-system
  labels:
    app.kubernetes.io/managed-by: Helm
spec:
  hosts:
  - "theater.27.96.156.180.nip.io"
  gateways:
  - cp-gateway
  http:
  - match:
    - uri:
        prefix: /users
    route:
    - destination:
        host: user-service.theater-msa.svc.cluster.local
        port:
          number: 8081
    fault:
      delay:
        percentage:
          value: 0.1
        fixedDelay: 1s
  - match:
    - uri:
        prefix: /movies
    route:
    - destination:
        host: movie-service.theater-msa.svc.cluster.local
        port:
          number: 8082
    retries:
      attempts: 3
      perTryTimeout: 2s
  - match:
    - uri:
        prefix: /bookings
    route:
    - destination:
        host: booking-service.theater-msa.svc.cluster.local
        port:
          number: 8083
  - match:
    - uri:
        prefix: /deployment-status
    route:
    - destination:
        host: api-gateway.theater-msa.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: api-gateway.theater-msa.svc.cluster.local
        port:
          number: 8080
